--- a/rv2_camera/CMakeLists.txt
+++ b/rv2_camera/CMakeLists.txt
@@ -15,51 +15,98 @@ if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
   add_compile_options(-Wall -Wextra -Wpedantic)
 endif()
 
-if($ENV{ROS_DISTRO} STREQUAL "foxy")
-  add_compile_options(-DROS_DISTRO=1)
-elseif($ENV{ROS_DISTRO} STREQUAL "humble")
-  add_compile_options(-DROS_DISTRO=2)
-else()# eloquent
-  add_compile_options(-DROS_DISTRO=0)
-endif()
-
-# find dependencies
-SET(ENABLE_VS_NODE False CACHE BOOL "Some user-specified option")
-if( ENABLE_VS_NODE ) 
-  add_compile_options(-DVS_NODE)
+# Check ROS_DISTRO
+set(MY_ROS2_DISTRO $ENV{ROS_DISTRO})
+if(${MY_ROS2_DISTRO} STREQUAL "foxy")
+  add_definitions(-DFOUND_FOXY)
+elseif(${MY_ROS2_DISTRO} STREQUAL "humble")
+  add_definitions(-DFOUND_HUMBLE)
+else()
+  message(FATAL_ERROR "ROS_DISTRO is not found or not supported.")
 endif()
 
 find_package(ament_cmake REQUIRED)
 find_package(rclcpp REQUIRED)
+find_package(rclcpp_components REQUIRED)
 find_package(sensor_msgs REQUIRED)
 find_package(rv2_interfaces REQUIRED)
 find_package(OpenCV ${VERSION_REQ_OCV} REQUIRED)
 
-set (SRC_FILES
-  ${CMAKE_CURRENT_SOURCE_DIR}/src/camera_node.cpp
-  ${CMAKE_CURRENT_SOURCE_DIR}/src/main.cpp
+set(DEPENDENCIES
+    rclcpp
+    rclcpp_components
+    sensor_msgs
+    rv2_interfaces
 )
 
 # Include directories
 include_directories(
-  ${CMAKE_CURRENT_SOURCE_DIR}/include
+  include
+  ${OpenCV_INCLUDE_DIRS}
 )
-
-include_directories(${OpenCV_INCLUDE_DIRS})
 
 link_directories(${OpenCV_LIBRARY_DIRS})
 
-## Build
-add_executable(main ${SRC_FILES})
-ament_target_dependencies(main rclcpp rv2_interfaces sensor_msgs)
-target_link_libraries(main
+
+
+# Build
+
+## Component
+
+# create ament index resource which references the libraries in the binary dir
+set(node_plugins "")
+
+# rv2_camera Component
+add_library(rv2_camera_component
+  SHARED src/camera_component.cpp
+)
+target_compile_definitions(rv2_camera_component
+  PRIVATE "COMPOSITION_BUILDING_DLL"
+)
+target_link_libraries(rv2_camera_component
   ${OpenCV_LIBRARIES}
 )
+ament_target_dependencies(rv2_camera_component ${DEPENDENCIES})
+rclcpp_components_register_nodes(rv2_camera_component "rv2_sensors::CameraComponent")
+set(node_plugins "${node_plugins}rv2_sensors::CameraComponent;$<TARGET_FILE:rv2_camera_component>\n")
 
-## Install
+if(NOT WIN32)
+  ament_environment_hooks(
+    "${ament_cmake_package_templates_ENVIRONMENT_HOOK_LIBRARY_PATH}"
+  )
+endif()
+
+## Executable
+
+add_executable(camera_node src/camera_node.cpp)
+target_link_libraries(camera_node
+  rv2_camera_component
+  ${OpenCV_LIBRARIES}
+)
+ament_target_dependencies(camera_node ${DEPENDENCIES})
+
+
+# Install
+
+## Component
 install(TARGETS
-  main
+  rv2_camera_component
+  ARCHIVE DESTINATION lib
+  LIBRARY DESTINATION lib
+  # RUNTIME DESTINATION bin
+  RUNTIME DESTINATION lib/${PROJECT_NAME}
+)
+
+## Executable
+install(TARGETS
+  camera_node
   DESTINATION lib/${PROJECT_NAME}
+)
+
+## Include
+install(DIRECTORY
+  include/
+  DESTINATION include/${PROJECT_NAME}
 )
 
 install(
@@ -67,4 +114,7 @@ install(
   DESTINATION share/${PROJECT_NAME}
 )
 
+ament_export_include_directories(include)
+ament_export_libraries(rv2_camera_component)
+ament_export_dependencies(${DEPENDENCIES})
 ament_package()
