feat: support startup_location parameter.

--- a/rv2_gnss/params/system.yaml
+++ b/rv2_gnss/params/system.yaml
@@ -1,7 +1,9 @@
 launch:
     params: "params.yaml"
     launch: "launch.py"
+    startup_location: "${HOME}" # Leave empty if not needed.
     use_root: false
+    gui_mode: false
 
 network:
     interface: "eno1"
