fix: node execution and install requirement file path.

--- a/rv2_camera/params/params.yaml
+++ b/rv2_camera/params/params.yaml
@@ -33,5 +33,6 @@
         cameraUseColor: true
 
         ## Procedure timeout parameters
+        procStatusRegPeriod_ms: 500.0 # Procedure status registration period (required)
         imagePublishProcTimeout_ms: 100.0 # 10fps
         caminfoPublishProcTimeout_ms: 2000.0 # 0.5fps
