--- a/rv2_ultrasound/params/params.yaml
+++ b/rv2_ultrasound/params/params.yaml
@@ -30,5 +30,6 @@
         fov : 15.0 # degree
 
         ## Procedure timeout parameters
+        procStatusRegPeriod_ms: 500.0 # Procedure status registration period (required)
         serialModuleProcTimeout_ms: 100.0
         msgPublishProcTimeout_ms: 200.0
