--- a/rv2_gnss/params/params.yaml
+++ b/rv2_gnss/params/params.yaml
@@ -5,11 +5,16 @@
         namespace: ""
         nodeName: "rv2_gnss"            # rv2_sensors only
         id: "0"                         # rv2_sensors only
+
         devManageService: "devmanage_0" # Service name
         devInterface: "eno1"            # rv2_sensors only
+        procStatusRegPeriod_ms: 500.0   # Procedure status registration period
+
         qosService: "qos_0"             # Service name
         qosDirPath: "qos"               # rv2_sensors only
+
         safetyService: ""               # Service name
+
         timesyncService: ""             # Service name
         timesyncPeriod_ms: 0.0          # rv2_sensors only
         timesyncAccuracy_ms: 0.0        # rv2_sensors only
@@ -26,6 +31,5 @@
         gpsdPort: 2947
 
         ## Procedure timeout parameters
-        procStatusRegPeriod_ms: 500.0 # Procedure status registration period (required)
         gpsModuleProcTimeout_ms: 6000.0
         msgPublishProcTimeout_ms: 1000.0
