--- a/rv2_ultrasound/params/params.yaml
+++ b/rv2_ultrasound/params/params.yaml
@@ -5,11 +5,16 @@
         namespace: ""
         nodeName: "rv2_ultrasound"      # rv2_sensors only
         id: "0"                         # rv2_sensors only
+
         devManageService: "devmanage_0" # Service name
         devInterface: "eno1"            # rv2_sensors only
+        procStatusRegPeriod_ms: 500.0   # Procedure status registration period
+
         qosService: "qos_0"             # Service name
         qosDirPath: "qos"               # rv2_sensors only
+
         safetyService: ""               # Service name
+
         timesyncService: ""             # Service name
         timesyncPeriod_ms: 0.0          # rv2_sensors only
         timesyncAccuracy_ms: 0.0        # rv2_sensors only
@@ -30,6 +35,5 @@
         fov : 15.0 # degree
 
         ## Procedure timeout parameters
-        procStatusRegPeriod_ms: 500.0 # Procedure status registration period (required)
         serialModuleProcTimeout_ms: 100.0
         msgPublishProcTimeout_ms: 200.0
